<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AgregarVehiculo">

    <TextView
        android:id="@+id/txtTituloCrearVehiculo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/txtTituloAgregarVehiculo"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgFotoSeleccionada"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:onClick="seleccionar_foto"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <EditText
        android:id="@+id/txtPlaca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/placa"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtMarca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/marca"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtLinea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/linea"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtModelo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/modelo"
        android:inputType="textPersonName" />

    <Spinner
        android:id="@+id/cmbUso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAgregar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="guardar"
            android:text="@string/btnAgregarVehiculo" />

        <Button
            android:id="@+id/btnLimpiar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="limpiar"
            android:text="@string/btnLimpiarVehiculo" />
    </LinearLayout>

</LinearLayout>